@@ -1,5 +1,6 @@
 package com.mamiyaotaru.voxelmap.entityrender;
 
+import com.mamiyaotaru.voxelmap.RadarSettingsManager;
 import com.mamiyaotaru.voxelmap.VoxelConstants;
 import com.mamiyaotaru.voxelmap.entityrender.armors.AbstractArmorHandler;
 import com.mamiyaotaru.voxelmap.entityrender.armors.DefaultArmorHandler;
@@ -13,32 +14,9 @@ import com.mamiyaotaru.voxelmap.entityrender.variants.TropicalFishVariantDataFac
 import com.mamiyaotaru.voxelmap.entityrender.variants.VillagerVariantDataFactory;
 import com.mamiyaotaru.voxelmap.textures.Sprite;
 import com.mamiyaotaru.voxelmap.textures.TextureAtlas;
-import com.mamiyaotaru.voxelmap.util.AllocatedTexture;
 import com.mamiyaotaru.voxelmap.util.EmptySubmitNodeCollector;
-import com.mamiyaotaru.voxelmap.util.GLUtils;
 import com.mamiyaotaru.voxelmap.util.ImageUtils;
-import com.mamiyaotaru.voxelmap.util.PropertyParser;
-import com.mamiyaotaru.voxelmap.util.VoxelMapCachedOrthoProjectionMatrixBuffer;
-import com.mamiyaotaru.voxelmap.util.VoxelMapPipelines;
-import com.mojang.blaze3d.ProjectionType;
-import com.mojang.blaze3d.buffers.GpuBuffer;
-import com.mojang.blaze3d.buffers.GpuBufferSlice;
-import com.mojang.blaze3d.buffers.Std140Builder;
-import com.mojang.blaze3d.pipeline.RenderPipeline;
-import com.mojang.blaze3d.platform.Lighting;
-import com.mojang.blaze3d.systems.RenderPass;
-import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.textures.FilterMode;
-import com.mojang.blaze3d.textures.GpuTexture;
-import com.mojang.blaze3d.textures.GpuTextureView;
-import com.mojang.blaze3d.textures.TextureFormat;
-import com.mojang.blaze3d.vertex.BufferBuilder;
-import com.mojang.blaze3d.vertex.MeshData;
 import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.blaze3d.vertex.Tesselator;
-import com.mojang.blaze3d.vertex.VertexFormat;
-import com.mojang.blaze3d.vertex.VertexFormat.Mode;
-import com.mojang.math.Axis;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.model.EntityModel;
 import net.minecraft.client.model.animal.camel.CamelModel;
@@ -61,14 +39,9 @@ import net.minecraft.client.renderer.entity.LivingEntityRenderer;
 import net.minecraft.client.renderer.entity.SlimeRenderer;
 import net.minecraft.client.renderer.entity.layers.SlimeOuterLayer;
 import net.minecraft.client.renderer.entity.state.EntityRenderState;
-import net.minecraft.client.renderer.texture.AbstractTexture;
-import net.minecraft.client.renderer.texture.OverlayTexture;
-import net.minecraft.core.Direction;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.resources.Identifier;
 import net.minecraft.server.packs.resources.Resource;
-import net.minecraft.util.ARGB;
-import net.minecraft.util.LightCoordsUtil;
 import net.minecraft.util.Mth;
 import net.minecraft.util.Util;
 import net.minecraft.world.entity.Entity;
@@ -78,13 +51,8 @@ import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.animal.fish.Pufferfish;
 import net.minecraft.world.entity.animal.fish.Salmon;
 import net.minecraft.world.entity.animal.fish.TropicalFish;
-import net.minecraft.world.entity.animal.sheep.Sheep;
 import net.minecraft.world.entity.boss.enderdragon.EnderDragon;
-import org.joml.Matrix4f;
 import org.joml.Matrix4fStack;
-import org.joml.Vector3f;
-import org.joml.Vector4f;
-import org.lwjgl.system.MemoryStack;
 
 import javax.imageio.ImageIO;
 import java.awt.AlphaComposite;
@@ -92,24 +60,21 @@ import java.awt.Graphics2D;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.ByteBuffer;
 import java.util.HashMap;
-import java.util.LinkedHashMap;
 import java.util.Optional;
-import java.util.OptionalDouble;
-import java.util.OptionalInt;
 import java.util.Properties;
 import java.util.concurrent.ConcurrentLinkedQueue;
 
 public class EntityMapImageManager {
     public static final Identifier resourceTextureAtlasMarker = Identifier.fromNamespaceAndPath(VoxelConstants.MOD_ID, "atlas/mobs");
-
+    private final RadarSettingsManager radarOptions;
     private final TextureAtlas textureAtlas;
     private final Minecraft minecraft = Minecraft.getInstance();
 
     private final HashMap<EntityType<?>, EntityVariantDataFactory> variantDataFactories = new HashMap<>();
     private final HashMap<EntityType<?>, AbstractArmorHandler> armorHandlers = new HashMap<>();
     private final DefaultArmorHandler defaultArmorHandler = new DefaultArmorHandler();
+    private final PoseStack emptyPoseStack = new PoseStack();
     private final EmptySubmitNodeCollector emptySubmitNodeCollector = new EmptySubmitNodeCollector();
     private final Class<?>[] fullRenderModels;
     private final HashMap<EntityType<?>, Properties> customMobProperties = new HashMap<>();
@@ -118,41 +83,18 @@ public class EntityMapImageManager {
     private int fulfilledImageCreationRequests;
     private final ConcurrentLinkedQueue<Runnable> taskQueue = new ConcurrentLinkedQueue<>();
 
-    public static final int LIGHT = LightCoordsUtil.FULL_BRIGHT;
-    public static final int OVERLAY = OverlayTexture.NO_OVERLAY;
-    private final GpuBuffer lightingBuffer;
-    private final VoxelMapCachedOrthoProjectionMatrixBuffer projection;
-    private final Identifier resourceFboTexture = Identifier.fromNamespaceAndPath(VoxelConstants.MOD_ID, "entityimagemanager/fbo");
-    private final Tesselator fboTessellator = new Tesselator(4096);
-    private final GpuTexture fboTexture;
-    private final GpuTexture fboDepthTexture;
-    private final GpuTextureView fboTextureView;
-    private final GpuTextureView fboDepthTextureView;
+    private final EntityGPURenderer gpuRenderer = new EntityGPURenderer();
+    private final EntityCPURenderer cpuRenderer = new EntityCPURenderer();
+    private boolean cpuRendering = false;
+    private boolean lastCpuRendering = false;
 
     public EntityMapImageManager() {
+        this.radarOptions = VoxelConstants.getVoxelMapInstance().getRadarOptions();
+
         this.textureAtlas = new TextureAtlas("mobsmap", resourceTextureAtlasMarker);
         this.textureAtlas.setFilter(true, false);
 
         this.fullRenderModels = new Class[] { CodModel.class, MagmaCubeModel.class, SalmonModel.class, SlimeModel.class, TropicalFishSmallModel.class, TropicalFishLargeModel.class };
-
-        Vector3f fullBright = new Vector3f(1.0F, -1.0F, 1.0F).normalize();
-        Vector3f fullBright2 = new Vector3f(-1.0F, -1.0F, 1.0F).normalize();
-        this.lightingBuffer = RenderSystem.getDevice().createBuffer(() -> "VoxelMap Lighting UBO", GpuBuffer.USAGE_UNIFORM + GpuBuffer.USAGE_COPY_DST, Lighting.UBO_SIZE);
-        try (MemoryStack memoryStack = MemoryStack.stackPush()) {
-            ByteBuffer byteBuffer = Std140Builder.onStack(memoryStack, Lighting.UBO_SIZE).putVec3(fullBright).putVec3(fullBright2).get();
-            RenderSystem.getDevice().createCommandEncoder().writeToBuffer(this.lightingBuffer.slice(), byteBuffer);
-        }
-
-        final int fboTextureSize = 512;
-        this.fboTexture = RenderSystem.getDevice().createTexture("voxelmap-radarfbotexture", GpuTexture.USAGE_COPY_DST | GpuTexture.USAGE_COPY_SRC | GpuTexture.USAGE_TEXTURE_BINDING | GpuTexture.USAGE_RENDER_ATTACHMENT, TextureFormat.RGBA8, fboTextureSize, fboTextureSize, 1, 1);
-        this.fboDepthTexture = RenderSystem.getDevice().createTexture("voxelmap-radarfbodepth", GpuTexture.USAGE_COPY_DST | GpuTexture.USAGE_COPY_SRC | GpuTexture.USAGE_TEXTURE_BINDING | GpuTexture.USAGE_RENDER_ATTACHMENT, TextureFormat.DEPTH32, fboTextureSize, fboTextureSize, 1, 1);
-        Minecraft.getInstance().getTextureManager().register(resourceFboTexture, new AllocatedTexture(fboTexture));
-
-        // this.fboTexture = fboTexture.getTexture();
-        fboTextureView = RenderSystem.getDevice().createTextureView(this.fboTexture);
-        fboDepthTextureView = RenderSystem.getDevice().createTextureView(this.fboDepthTexture);
-
-        projection = new VoxelMapCachedOrthoProjectionMatrixBuffer("VoxelMap Entity Map Image Proj", 256.0F, -256.0F, -256.0F, 256.0F, 1000.0F, 21000.0F);
         reset();
     }
 
@@ -234,6 +176,10 @@ public class EntityMapImageManager {
         }
 
         return sprite;
+    }
+
+    private AbstractEntityRenderer getEntityRenderer() {
+        return cpuRendering ? cpuRenderer : gpuRenderer;
     }
 
     private void addVariantDataFactory(EntityVariantDataFactory factory) {
@@ -319,62 +265,44 @@ public class EntityMapImageManager {
         debugInfo("EntityMapImageManager: Rendering Mob of type " + entity.getType().getDescriptionId());
 
         Sprite sprite = textureAtlas.registerEmptyIcon(variant);
+        Properties iconConfig = getCustomMobProperties(entity.getType());
 
-        Identifier primaryTexture = variant.getPrimaryTexture();
-        Identifier secondaryTexture = variant.getSecondaryTexture();
-        Identifier tertiaryTexture = variant.getTertiaryTexture();
-        Identifier quaternaryTexture = variant.getQuaternaryTexture();
-
-        int primaryColor = getPrimaryTextureColor(entity);
-        int secondaryColor = getSecondaryTextureColor(entity);
-        int tertiaryColor = getTertiaryTextureColor(entity);
-        int quaternaryColor = getQuaternaryTextureColor(entity);
-
-        TextureWithColor primaryData = new TextureWithColor(primaryTexture, primaryColor);
-        TextureWithColor secondaryData = secondaryTexture == null ? null : new TextureWithColor(secondaryTexture, secondaryColor);
-        TextureWithColor tertiaryData = tertiaryTexture == null ? null : new TextureWithColor(tertiaryTexture, tertiaryColor);
-        TextureWithColor quaternaryData = quaternaryTexture == null ? null : new TextureWithColor(quaternaryTexture, quaternaryColor);
-
-        CaptureContext context = setupCapture(entity, VoxelMapPipelines.ENTITY_ICON);
-        PoseStack pose = context.poseStack();
-        BufferBuilder bufferBuilder = context.bufferBuilder();
+        AbstractEntityRenderer renderer = getEntityRenderer();
+        renderer.setup(iconConfig);
+        renderer.enableCull(false);
 
         EntityRenderState renderState = ((EntityRenderer) baseRenderer).createRenderState(entity, 0.5F);
-        ((EntityRenderer) baseRenderer).submit(renderState, pose, emptySubmitNodeCollector, minecraft.gameRenderer.getGameRenderState().levelRenderState.cameraRenderState);
+        ((EntityRenderer) baseRenderer).submit(renderState, emptyPoseStack, emptySubmitNodeCollector, minecraft.gameRenderer.getGameRenderState().levelRenderState.cameraRenderState);
 
         EntityModel model = getEntityModel(baseRenderer);
         if (model == null) {
             return null;
         }
-
         model.resetPose();
 
         for (ModelPart part : getPartToRender(model)) {
             part.xRot = 0;
             part.yRot = 0;
             part.zRot = 0;
-            part.render(pose, bufferBuilder, LIGHT, OVERLAY, 0xffffffff); // light, overlay, color
+
+            renderer.addMesh(part);
         }
 
         if (baseRenderer instanceof SlimeRenderer slimeRenderer) {
-            SlimeOuterLayer slimeOuter = (SlimeOuterLayer) slimeRenderer.layers.get(0);
-            slimeOuter.model.root().render(pose, bufferBuilder, LIGHT, OVERLAY, 0xffffffff); // light, overlay, color
+            SlimeOuterLayer slimeOuter = (SlimeOuterLayer) slimeRenderer.layers.getFirst();
+            renderer.addMesh(slimeOuter.model.root());
         }
 
-        boolean success = this.flushCapture(context, primaryData, secondaryData, tertiaryData, quaternaryData);
-        if (!success) {
-            return null;
-        }
+        AbstractEntityRenderer.TextureSet textureSet = new AbstractEntityRenderer.TextureSet(
+                variant.getPrimaryTexture(), getPrimaryTextureColor(entity),
+                variant.getSecondaryTexture(), getSecondaryTextureColor(entity),
+                variant.getTertiaryTexture(), getTertiaryTextureColor(entity),
+                variant.getQuaternaryTexture(), getQuaternaryTextureColor(entity)
+        );
 
-        Properties mobProperties = getCustomMobProperties(entity.getType());
-        float iconScale = Float.parseFloat(mobProperties.getProperty("scale", "1.0"));
-
-        // if (VoxelConstants.DEBUG) {
-        // ImageUtils.saveImage("mob_" + entity.getType().getDescriptionId(), fboTexture, 0, fboTexture.getWidth(0), fboTexture.getHeight(0));
-        // }
-        imageCreationRequests++;
-        GLUtils.readTextureContentsToBufferedImage(fboTexture, image2 -> {
-            postProcessRenderedMobImage(entity, sprite, model, image2, addBorder, iconScale);
+        float iconScale = Float.parseFloat(iconConfig.getProperty("scale", "1.0"));
+        renderer.render(textureSet, (output) -> {
+            postProcessRenderedMobImage(entity, sprite, model, output, addBorder, iconScale);
         });
 
         return sprite;
@@ -440,12 +368,6 @@ public class EntityMapImageManager {
     private void postProcessRenderedMobImage(Entity entity, Sprite sprite, @SuppressWarnings("rawtypes") EntityModel model, BufferedImage image2, boolean addBorder, float scale) {
         Util.backgroundExecutor().execute(() -> {
             BufferedImage image = image2;
-            image = ImageUtils.flipHorizontal(image);
-            // try {
-            // ImageIO.write(image, "png", new File(entity.getType().getDescriptionId() + ".png"));
-            // } catch (IOException e) {
-            // e.printStackTrace();
-            // }
 
             switch (model) {
                 case CamelModel camelModel -> {
@@ -512,18 +434,19 @@ public class EntityMapImageManager {
             return existing;
         }
         Sprite sprite = textureAtlas.registerEmptyIcon(armorData);
+        Properties iconConfig = getCustomMobProperties(entity.getType());
 
-        CaptureContext context = setupCapture(entity, VoxelMapPipelines.ENTITY_ICON_CULLED);
-        armorHandler.renderArmorModel(context);
+        AbstractEntityRenderer renderer = getEntityRenderer();
+        renderer.setup(iconConfig);
+        renderer.enableCull(true);
 
-        flushCapture(context, new TextureWithColor(armorData.getTexture(), 0xFFFFFFFF), null, null, null);
+        armorHandler.renderArmorModel(renderer);
 
-        Properties mobProperties = getCustomMobProperties(entity.getType());
-        float iconScale = Float.parseFloat(mobProperties.getProperty("scale", "1.0"));
+        AbstractEntityRenderer.TextureSet textureSet = new AbstractEntityRenderer.TextureSet(armorData.getTexture(), 0xFFFFFFFF, null, -1, null, -1, null, -1);
 
-        imageCreationRequests++;
-        GLUtils.readTextureContentsToBufferedImage(fboTexture, image2 -> {
-            postProcessRenderedArmorImage(sprite, image2, armorHandler, armorData, iconScale);
+        float iconScale = Float.parseFloat(iconConfig.getProperty("scale", "1.0"));
+        renderer.render(textureSet, (output) -> {
+            postProcessRenderedArmorImage(sprite, output, armorHandler, armorData, iconScale);
         });
 
         return sprite;
@@ -542,6 +465,8 @@ public class EntityMapImageManager {
     }
 
     private void addToCreationTask(Sprite sprite, BufferedImage image, String debugId) {
+        imageCreationRequests++;
+
         taskQueue.add(() -> {
             fulfilledImageCreationRequests++;
 
@@ -621,118 +546,15 @@ public class EntityMapImageManager {
         return new ModelPart[] { model.root() };
     }
 
-    private CaptureContext setupCapture(Entity entity, RenderPipeline renderPipeline) {
-        PoseStack poseStack = new PoseStack();
-        poseStack.translate(0.0f, 0.0f, -3000.0f);
-        float scale = 64;
-        poseStack.scale(scale, scale, -scale);
-
-        Properties mobProperties = getCustomMobProperties(entity.getType());
-        LinkedHashMap<Direction.Axis, Float> rotation = PropertyParser.parseVector(mobProperties.getProperty("rotation", ""));
-
-        if (rotation != null) {
-            rotation.forEach((axis, value) -> {
-                switch (axis) {
-                    case Direction.Axis.X -> poseStack.mulPose(Axis.XP.rotationDegrees(value));
-                    case Direction.Axis.Y -> poseStack.mulPose(Axis.YP.rotationDegrees(value));
-                    case Direction.Axis.Z -> poseStack.mulPose(Axis.ZP.rotationDegrees(value));
-                }
-            });
-        }
-
-        BufferBuilder bufferBuilder = fboTessellator.begin(Mode.QUADS, renderPipeline.getVertexFormat());
-
-        return new CaptureContext(poseStack, renderPipeline, bufferBuilder);
-    }
-
-    private boolean flushCapture(CaptureContext context, TextureWithColor primary, TextureWithColor secondary, TextureWithColor tertiary, TextureWithColor quaternary) {
-        RenderPipeline renderPipeline = context.renderPipeline();
-        BufferBuilder bufferBuilder = context.bufferBuilder();
-
-        AbstractTexture primaryTexture = minecraft.getTextureManager().getTexture(primary.texture());
-        AbstractTexture secondaryTexture = secondary == null ? null : minecraft.getTextureManager().getTexture(secondary.texture());
-        AbstractTexture tertiaryTexture = tertiary == null ? null : minecraft.getTextureManager().getTexture(tertiary.texture());
-        AbstractTexture quaternaryTexture = quaternary  == null ? null : minecraft.getTextureManager().getTexture(quaternary.texture());
-		
-        ProjectionType originalProjectionType = RenderSystem.getProjectionType();
-        GpuBufferSlice originalProjectionMatrix = RenderSystem.getProjectionMatrixBuffer();
-        RenderSystem.setProjectionMatrix(projection.getBuffer(), ProjectionType.ORTHOGRAPHIC);
-        RenderSystem.setShaderLights(lightingBuffer.slice());
-        RenderSystem.getModelViewStack().pushMatrix();
-        RenderSystem.getModelViewStack().identity();
-
-        GpuBufferSlice primaryTransforms = dynamicTransformsWithColor(primary.color());
-        GpuBufferSlice secondaryTransforms = secondary == null ? null : dynamicTransformsWithColor(secondary.color());
-        GpuBufferSlice tertiaryTransforms = tertiary == null ? null : dynamicTransformsWithColor(tertiary.color());
-        GpuBufferSlice quaternaryTransforms = quaternary == null ? null : dynamicTransformsWithColor(quaternary.color());
-
-        try (MeshData meshData = bufferBuilder.build()) {
-            // no mesh? might happen with some mods
-            if (meshData == null) {
-                return false;
-            }
-            GpuBuffer vertexBuffer = renderPipeline.getVertexFormat().uploadImmediateVertexBuffer(meshData.vertexBuffer());
-            GpuBuffer indexBuffer;
-            VertexFormat.IndexType indexType;
-            if (meshData.indexBuffer() == null) {
-                RenderSystem.AutoStorageIndexBuffer autoStorageIndexBuffer = RenderSystem.getSequentialBuffer(meshData.drawState().mode());
-                indexBuffer = autoStorageIndexBuffer.getBuffer(meshData.drawState().indexCount());
-                indexType = autoStorageIndexBuffer.type();
-            } else {
-                indexBuffer = renderPipeline.getVertexFormat().uploadImmediateIndexBuffer(meshData.indexBuffer());
-                indexType = meshData.drawState().indexType();
-            }
-
-            try (RenderPass renderPass = RenderSystem.getDevice().createCommandEncoder().createRenderPass(() -> "VoxelMap entity image renderer", fboTextureView, OptionalInt.of(0x00000000), fboDepthTextureView, OptionalDouble.of(1.0))) {
-                renderPass.setPipeline(renderPipeline);
-                RenderSystem.bindDefaultUniforms(renderPass);
-                renderPass.setUniform("DynamicTransforms", primaryTransforms);
-                renderPass.bindTexture("Sampler0", primaryTexture.getTextureView(), primaryTexture.getSampler());
-                renderPass.bindTexture("Sampler1", minecraft.gameRenderer.overlayTexture().getTextureView(), RenderSystem.getSamplerCache().getClampToEdge(FilterMode.LINEAR));
-                renderPass.bindTexture("Sampler2", minecraft.gameRenderer.lightmap(), RenderSystem.getSamplerCache().getClampToEdge(FilterMode.LINEAR));
-                renderPass.setVertexBuffer(0, vertexBuffer);
-                renderPass.setIndexBuffer(indexBuffer, indexType);
-                renderPass.drawIndexed(0, 0, meshData.drawState().indexCount(), 1);
-                if (secondaryTexture != null) {
-                    renderPass.setUniform("DynamicTransforms", secondaryTransforms);
-                    renderPass.bindTexture("Sampler0", secondaryTexture.getTextureView(), secondaryTexture.getSampler());
-                    renderPass.drawIndexed(0, 0, meshData.drawState().indexCount(), 1);
-                }
-                if (tertiaryTexture != null) {
-                    renderPass.setUniform("DynamicTransforms", tertiaryTransforms);
-                    renderPass.bindTexture("Sampler0", tertiaryTexture.getTextureView(), tertiaryTexture.getSampler());
-                    renderPass.drawIndexed(0, 0, meshData.drawState().indexCount(), 1);
-                }
-                if (quaternaryTexture != null) {
-                    renderPass.setUniform("DynamicTransforms", quaternaryTransforms);
-                    renderPass.bindTexture("Sampler0", quaternaryTexture.getTextureView(), quaternaryTexture.getSampler());
-                    renderPass.drawIndexed(0, 0, meshData.drawState().indexCount(), 1);
-                }
-            }
-        } finally {
-            RenderSystem.getModelViewStack().popMatrix();
-            RenderSystem.setProjectionMatrix(originalProjectionMatrix, originalProjectionType);
-        }
-
-        return true;
-    }
-
-    private GpuBufferSlice dynamicTransformsWithColor(int color) {
-        float r = ARGB.redFloat(color);
-        float g = ARGB.greenFloat(color);
-        float b = ARGB.blueFloat(color);
-        float a = ARGB.alphaFloat(color);
-        return dynamicTransformsWithColor(r, g, b, a);
-    }
-
-    private GpuBufferSlice dynamicTransformsWithColor(float r, float g, float b, float a) {
-        return RenderSystem.getDynamicUniforms().writeTransform(RenderSystem.getModelViewMatrix(), new Vector4f(r, g, b, a), new Vector3f(), new Matrix4f());
-    }
-
     public void onRenderTick(Matrix4fStack matrixStack) {
         Runnable task;
         while ((task = taskQueue.poll()) != null) {
             task.run();
+        }
+
+        if ((cpuRendering = radarOptions.cpuRendering || radarOptions.forceCpuRendering) != lastCpuRendering) {
+            reset();
+            lastCpuRendering = cpuRendering;
         }
     }
 
@@ -741,8 +563,4 @@ public class EntityMapImageManager {
             VoxelConstants.getLogger().info(str);
         }
     }
-
-    public record CaptureContext(PoseStack poseStack, RenderPipeline renderPipeline, BufferBuilder bufferBuilder) {}
-
-    public record TextureWithColor(Identifier texture, int color) {}
 }
